# containerd-shim-spin

./: Cargo.toml  Makefile  containerd-shim-spin.sln
.github/workflows/: ci.yaml  spin-registry-push.yaml
containerd-shim-spin/: Cargo.toml
containerd-shim-spin/src/: engine.rs  main.rs
cross/: Dockerfile
scripts/: build-and-push-test-apps.sh  pod-status-check.sh  up.sh  workloads-delete.sh  workloads.sh
tests/workloads/: workload.yaml
