[workspace.package]
version = "0.12.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/spinkube/containerd-shim-spin"
homepage = "https://github.com/spinkube/containerd-shim-spin"


[workspace]
resolver = "2"
members = [
    "tests",
    "containerd-shim-spin"
]

[patch.crates-io]
containerd-shim = { git = 'https://github.com/rajatjindal/rust-extensions',  rev = "1cb5e1501d9a8c95d039792e8b27ae2f9e68e02d" }