[package]
name = "containerd-shim-spin-v2"
version = "0.12.0"
authors = ["SpinKube Engineering Team"]
edition = "2021"
repository = 'https://github.com/spinkube/containerd-shim-spin'
license = "Apache-2.0"
homepage = 'https://github.com/spinkube/containerd-shim-spin'
description = """
Containerd shim for running Spin workloads.
"""

[dependencies]
containerd-shim-wasm = { git = "https://github.com/rajatjindal/runwasi", rev = "71f9339d9d4508b929e6c05e0c5d80258511ea12" }
containerd-shim = { version = "0.6.0" }
log = "0.4"
spin-app = { git = "https://github.com/fermyon/spin", tag = "v2.2.0" }
spin-core = { git = "https://github.com/fermyon/spin", tag = "v2.2.0" }
spin-trigger = { git = "https://github.com/fermyon/spin", tag = "v2.2.0" }
spin-trigger-http = { git = "https://github.com/fermyon/spin", tag = "v2.2.0" }
spin-redis-engine = { git = "https://github.com/fermyon/spin", tag = "v2.2.0" }
trigger-sqs = { git = "https://github.com/fermyon/spin-trigger-sqs", tag = "v0.6.0" }
spin-manifest = { git = "https://github.com/fermyon/spin", tag = "v2.2.0" }
spin-loader = { git = "https://github.com/fermyon/spin", tag = "v2.2.0" }
spin-oci = { git = "https://github.com/fermyon/spin", tag = "v2.2.0" }
spin-common = { git = "https://github.com/fermyon/spin", tag = "v2.2.0" }
wasmtime = "17.0.0"
tokio = { version = "1", features = ["rt"] }
openssl = { version = "*", features = ["vendored"] }
serde = "1.0"
serde_json = "1.0"
url = "2.3"
anyhow = "1.0"
oci-spec = { version = "0.6.3" }
futures = "0.3"
ctrlc = { version = "3.2", features = ["termination"] }

[patch.crates-io]
containerd-shim = { git = 'https://github.com/rajatjindal/rust-extensions/crates/shim',  rev = "5bdfec7af2959aa27bcd1a8b5140b8fab224c1f3" }
